--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -6,11 +6,16 @@
   "dependencies": {
     "@midwayjs/bootstrap": "^3.0.0",
     "@midwayjs/core": "^3.0.0",
+    "@midwayjs/cross-domain": "^3.3.5",
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/info": "^3.0.0",
+    "@midwayjs/jwt": "^3.3.5",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
-    "@midwayjs/validate": "^3.0.0"
+    "@midwayjs/orm": "^3.3.5",
+    "@midwayjs/validate": "^3.0.0",
+    "mysql": "^2.18.1",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.2.90",
