--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "vant": "^2.12.47",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
